--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,2 +1,2 @@
 # These are supported funding model platforms
-custom: ['https://www.manning.com/books/algorithms-and-data-structures-in-action']
+custom: ['https://www.manning.com/books/algorithms-and-data-structures-in-action?a_aid=data_structures_in_action&a_bid=cbe70a85']
